--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     image: mysql:latest
     container_name: ldmusic_mysql
     environment:
+      - MYSQL_ROOT_HOST=%
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=ldMusic
       - MYSQL_USER=admin
