--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,11 @@ Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Moment==0.9.0
 Flask-PageDown==0.3.0
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
+geographiclib==1.50
+geopy==1.22.0
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
