--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 blinker==1.4
+cffi==1.14.0
 click==7.1.2
+cryptography==2.9.2
 dnspython==1.16.0
 dominate==2.5.1
 email-validator==1.1.1
@@ -18,6 +20,10 @@ idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+pycparser==2.20
+PyMySQL==0.9.3
+python-dotenv==0.13.0
+six==1.15.0
 SQLAlchemy==1.3.17
 thr==0.3
 visitor==0.1.3
