--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.4.2
 blinker==1.4
 cffi==1.14.0
 click==7.1.2
@@ -9,6 +10,7 @@ Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
+Flask-Migrate==2.5.3
 Flask-Moment==0.9.0
 Flask-PageDown==0.3.0
 Flask-Script==2.0.6
@@ -19,10 +21,13 @@ geopy==1.22.0
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
+Mako==1.1.3
 MarkupSafe==1.1.1
 pycparser==2.20
 PyMySQL==0.9.3
+python-dateutil==2.8.1
 python-dotenv==0.13.0
+python-editor==1.0.4
 six==1.15.0
 SQLAlchemy==1.3.17
 thr==0.3
