--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 alembic==1.4.2
 blinker==1.4
+certifi==2020.4.5.2
 cffi==1.14.0
+chardet==3.0.4
 click==7.1.2
 cryptography==2.9.2
 dnspython==1.16.0
@@ -18,19 +20,23 @@ Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
 geographiclib==1.50
 geopy==1.22.0
+googlemaps==4.4.1
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.3
 MarkupSafe==1.1.1
+pkg-resources==0.0.0
 pycparser==2.20
 PyMySQL==0.9.3
 python-dateutil==2.8.1
 python-dotenv==0.13.0
 python-editor==1.0.4
+requests==2.23.0
 six==1.15.0
 SQLAlchemy==1.3.17
 thr==0.3
+urllib3==1.25.9
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.1
